Show typing icon against composing members of a MUC

https://bugzilla.gnome.org/show_bug.cgi?id=703487